Bug 316177 - Keyboard shortcut to activate desktop grid effect is not saved when modified from effect configuration
Summary: Keyboard shortcut to activate desktop grid effect is not saved when modified ...
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: effects-window-management (other bugs)
Version First Reported In: 4.10.0
Platform: Arch Linux Linux
: NOR minor
Target Milestone: 4.11
Assignee: KWin default assignee
URL: https://git.reviewboard.kde.org/r/111...
Keywords:
: 317272 (view as bug list)
Depends on:
Blocks:
 
Reported: 2013-03-05 14:26 UTC by Damien Gombault
Modified: 2013-08-02 20:57 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.11
Sentry Crash Report:
mgraesslin: ReviewRequest+


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Damien Gombault 2013-03-05 14:26:23 UTC
Keyboard shortcut to activate desktop grid effect is not saved when modified from effect configuration window (kwincompositing KCM module)
It works if I modify the shortcut from the keys KCM module.

Reproducible: Always

Steps to Reproduce:
1. Launch 'kcmshell4 kwincompositing'
2. Select 'All effects' tab
3. Search for 'Desktop grid' effect
4. Click on 'Configure' (icon) button
5. Modify shortcut for 'Display desktop grid'
6. Click 'OK' button
Actual Results:  
7. Re-open configuration, the change is not saved
8. The new shortcut does not work

Expected Results:  
7. Re-open configuration, the change is saved
8. The new shortcut works

Workaround :

1. Launch 'kcmshell4 keys'
2. Choose Kwin component
3. Search 'grid effect'
4. Modify shortcut : it works
Comment 1 Martin Flöser 2013-03-05 15:06:55 UTC
save is missing
Comment 2 Martin Flöser 2013-03-06 08:53:35 UTC
Git commit 82c52f7a5908b5bbe1350a31050c5aeacd0d7104 by Martin Gräßlin.
Committed on 06/03/2013 at 09:53.
Pushed by graesslin into branch 'KDE/4.10'.

Save shortcut editor in DesktopGrid config
FIXED-IN: 4.10.2
REVIEW: 109292

M  +1    -0    kwin/effects/desktopgrid/desktopgrid_config.cpp

http://commits.kde.org/kde-workspace/82c52f7a5908b5bbe1350a31050c5aeacd0d7104
Comment 3 Martin Flöser 2013-03-24 13:54:21 UTC
*** Bug 317272 has been marked as a duplicate of this bug. ***
Comment 4 Damien Gombault 2013-07-31 10:06:32 UTC
This bug is partially fixed :
 - if you modify _only_ the shortcut , the new shortcut is not saved.
 - if you modifty the shortcut and another setting, the new shortcut is saved.

I use KDE 4.10.5 on Archlinux 64 bits.
Comment 5 Thomas Lübking 2013-08-02 20:57:55 UTC
Git commit 293b9296bef4920c42eb96380e24a8fe42729b1b by Thomas Lübking.
Committed on 31/07/2013 at 10:14.
Pushed by luebking into branch 'KDE/4.11'.

desk-grid: bind sc editor keyChange to kcm changed
FIXED-IN: 4.11
REVIEW: 111812

M  +1    -0    kwin/effects/desktopgrid/desktopgrid_config.cpp

http://commits.kde.org/kde-workspace/293b9296bef4920c42eb96380e24a8fe42729b1b