desk-grid: bind sc editor keyChange to kcm changed

BUG: 316177
FIXED-IN: 4.11
REVIEW: 111812